catch only IOException on IOStream.close()